🐛 fix footer alignment

--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -9,7 +9,6 @@
   align-items: center;
   padding: 2rem;
   @include breakpoint($tablet) {
-    flex-direction: row;
     flex-direction: row-reverse;
     justify-content: space-between;
   }
@@ -18,14 +17,28 @@
     justify-content: space-between;
     align-items: center;
     width: 10rem;
+
     img {
       width: 1.8rem;
       filter: invert(100%);
       cursor: pointer;
+      transition: all 0.1s ease-in-out;
+      &:hover {
+        transform: scale(1.3);
+      }
     }
   }
   .madeWith {
+    @include breakpoint($tablet) {
+      width: 15rem;
+    }
     display: flex;
     gap: 0.6rem;
+  }
+  .copyRight {
+    @include breakpoint($tablet) {
+      width: 15rem;
+      text-align: right;
+    }
   }
 }
